--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,3 @@
-@use 'variaveis';
-
 * {
     margin: 0;
     padding: 0;
@@ -13,16 +11,26 @@
     background-image: url(/dist/images/oppenheimer_bg.jpg);
     background-size: cover;
 
+    @media (max-width: 768px) {
+        background-image: url(/dist/images/oppenheimer_bg_mobile.jpg);
+    }
 
     &__content {
         max-width: 440px;
+
+        @media (max-width: 767px) {
+            width: 100%;
+        }
 
         &__branding {
             img {
                 width: 380px;
                 margin-bottom: 30px;
-                display: block;
-                align-items: start;
+
+                @media (max-width: 768px) {
+                    max-width: 300px;
+                    width: 100%;
+                }
             }
         }
         
@@ -32,9 +40,21 @@
             font-size: 12px;
             color: #fff;
             font-weight: 600;
+
+            @media (max-width: 768px) {
+                justify-content: center;
+                text-align: center;
+                background-color: rgba(0, 0, 0, 0.5);
+                padding: 5px;
+                border-radius: 5px;
+            }
         }
         &__premios {
             margin-top: 40px;
+
+            @media (max-width: 768px) {
+                text-align: center;
+            }
             img {
                 width: 180px;
                 padding-bottom: 20px;
@@ -65,9 +85,19 @@
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                background-color: #fff;
+                background-color: #581313;
                 padding: 20px;
                 border-radius: 10px;
+
+                @media (max-width: 768px) {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    background-color: #581313;
+                    padding: 20px;
+                    border-radius: 10px;
+                }
             }
             
             .close-btn {
@@ -84,7 +114,7 @@
             .video-thumbnail {
                 position: absolute;
                 bottom: 50px;
-                left: 45vw;
+                left: 45%;
                 display: flex;
                 align-items: center;
                 cursor: pointer;
@@ -93,6 +123,12 @@
                 img {
                     width: 50px;
                     margin-right: 10px;
+                }
+
+                @media (max-width: 768px) {
+                    position: absolute;
+                    bottom: 50px;
+                    left: 29%;
                 }
             }
         
